--- a/ML_Assignment9.ipynb
+++ b/ML_Assignment9.ipynb
@@ -48,7 +48,7 @@
         "colab_type": "text"
       },
       "source": [
-        "##Question 1"
+        "##Problem 1"
       ]
     },
     {
@@ -94,7 +94,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Question 2"
+        "## Problem 2"
       ]
     },
     {
@@ -311,7 +311,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Question 3"
+        "## Problem 3"
       ]
     },
     {
@@ -582,7 +582,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Question 4"
+        "## Problem 4"
       ]
     },
     {
@@ -824,7 +824,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Question 5"
+        "## Problem 5"
       ]
     },
     {
@@ -1077,7 +1077,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Question 6"
+        "## Problem 6"
       ]
     },
     {
